public/css/main.css
/* logo and nav bar */
#main {
  display: block;
  position: absolute;
  left: 5%;
  top: -1%;
}
#logo-img {
  margin: 0 auto;
  width: 30%;
  height: 30%;
  padding: 3%;
  /* padding-top: 15%; */
}

.top-nav{
  background-color: #254666;
  margin-top: 1%;
}

.second-nav{
  padding-bottom: 1%;
}

/* carousel */


/* grid of images with captions */
.pic-grid{
  margin-top: 3%;
  margin-bottom: 3%;
  position: relative;
  text-align: right;
  color: white;
}

/* Bottom left text */
.bottom-left {
  position: absolute;
  bottom: 8px;
  left: 25%;
  /* font-size: 50%; */
}

/*banner & banner button*/
.banner {
  position: relative;
  width: 50%;
}

/* image responsive */
.banner img {
  width: 100%;
  height: auto;
}

/* btn style */
.banner .btn {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  background-color: blue;
  color: white;
  font-size: 16px;
  /* padding: 10px 74px; */
  border: none;
  cursor: pointer;
  border-radius: 5px;
  width: 50%
}

.banner .btn:hover {
  background-color: white;
  color: black;
}

/* content section */
.content {
  background-color: lightgrey;
  margin-top: 1%;
  margin-bottom: 2%;
}

.content-inner{
  margin-top: 3%;
}

.comp-pic{
  border: 1px solid grey;
}

/* collage */

.collage{
  margin-top: 3%;
  margin-bottom: 3%;
}

/* review carousel */
h1.testimonials-header{
    font-family: "Univers57-Condensed", sans-serif;
    font-size: 18pt;
    line-height: 1.1;
    text-transform: uppercase;
    font-weight: normal;
    padding: 6px;
}
section#home-reviews{
	margin: 50px 6px 70px 6px;
	padding: 100px 0;
	font-family: "Univers57-Condensed", sans-serif;
    color: #5d564f;
    background: #f7f7f7;
}
section#home-reviews h2{
	font-size: 1.75rem;
	text-transform: uppercase;
	margin-bottom: 1%;
}
.fa-quote-left{
	padding-right: 10px;
}
.fa-quote-right{
	padding-left: 10px;
}
section#home-reviews p{
	font-size: 13pt;
}
.stars{
	color: #BB8B41;
}

/* contact form */

.form{
      background: lightgrey;
      padding-top: 3%;
      padding-bottom: 3%;
      margin-bottom: 1%;
    }
.main-section{
	padding: 15px;
	background:#f1f1f1;
}
.custom-file-control::after {
  content: "Choose file...";
}
.custom-file-control::before {
  content: "Browse";
}

/* footer */

.page-footer{
  background-color: #254666;
  height: 30%;
  color:white;
}

